--- a/locales/nl.json
+++ b/locales/nl.json
@@ -2,8 +2,15 @@
     "settings": {
         "title": "App configuratie",
         "hostname": "IP / Hostnaam DucoBox",
-        "hostname_hint": "Dit is het locale IP adres van de Connectivity Board.",
-        "save": "Opslaan"
+        "hostname_hint": "Dit is het IP adres van de Connectivity Board op je lokale netwerk.",
+        "nothing_found": "Niets gevonden.",
+        "name": "Naam",
+        "ip_address": "IP adres",
+        "select": "Selecteren",
+        "save": "Opslaan",
+        "search": "Zoeken",
+        "cancel": "Annuleren",
+        "saved": "Instellingen zijn opgeslagen"
     },
     "error": {
         "hostname_not_set": "IP van de DucoBox is niet ingeseld in de instellingen van de app"
