added autodiscover for http

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,12 +3,13 @@
         "title": "App settings",
         "hostname": "IP / Hostname DucoBox",
         "hostname_hint": "This is the IP address of the Connectivity Board on your local network.",
+        "use_https": "Use https",
         "nothing_found": "Nothing found.",
         "name": "Name",
-        "ip_address": "IP address",
+        "url": "URL",
         "select": "Select",
         "save": "Save",
-        "search": "Search",
+        "search": "Search for DucoBox",
         "cancel": "Cancel",
         "saved": "Settings saved"
     },
