--- a/locales/nl.json
+++ b/locales/nl.json
@@ -3,12 +3,13 @@
         "title": "App configuratie",
         "hostname": "IP / Hostnaam DucoBox",
         "hostname_hint": "Dit is het IP adres van de Connectivity Board op je lokale netwerk.",
+        "use_https": "Gebruik https",
         "nothing_found": "Niets gevonden.",
         "name": "Naam",
-        "ip_address": "IP adres",
+        "url": "URL",
         "select": "Selecteren",
         "save": "Opslaan",
-        "search": "Zoeken",
+        "search": "Zoeken naar DucoBox",
         "cancel": "Annuleren",
         "saved": "Instellingen zijn opgeslagen"
     },
