--- a/locales/nl.json
+++ b/locales/nl.json
@@ -4,6 +4,7 @@
         "hostname": "IP / Hostnaam DucoBox",
         "hostname_hint": "Dit is het IP adres van de Connectivity Board op je lokale netwerk.",
         "use_https": "Gebruik https",
+        "use_communication_print_api": "Gebruik communication print api",
         "nothing_found": "Niets gevonden.",
         "name": "Naam",
         "url": "URL",
